# StepperDriverController

./: .gitignore  EEPROM_IMG.h  README.md  StepperDriver.ino
Collaudo/: Collaudo.ino
Maintenance/: CMakeLists.txt
Maintenance/src/: AutoscanComPortsGui.ui  MaintenanceGui.ui  MaintenanceWindow.cpp  MaintenanceWindow.h  main.cpp
Production/: BOM_StepperDriver_2024-11-13.csv  PickAndPlace_PCB_StepperDriver_2024-11-13.csv
StepperDriverController/: Board.h  EEPROM_IMG.h  Maintenance.cpp  Maintenance.h  Motor.cpp  StepperDriverController.ino
